WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282710
[WebGPU] explicit layouts should be validated for compatibility with the shader
https://bugs.webkit.org/show_bug.cgi?id=282710
Summary
[WebGPU] explicit layouts should be validated for compatibility with the shader
Mike Wyrzykowski
Reported
2024-11-06 13:30:26 PST
[WebGPU] explicit layouts should be validated for compatibility with the shader
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-06 13:30:39 PST
rdar://138847403
Mike Wyrzykowski
Comment 2
2024-11-06 13:46:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36284
EWS
Comment 3
2024-11-11 08:10:42 PST
Committed
286432@main
(646adcab0cef): <
https://commits.webkit.org/286432@main
> Reviewed commits have been landed. Closing PR #36284 and removing active labels.
Mike Wyrzykowski
Comment 4
2024-11-11 11:01:44 PST
Reopened Bugzilla. marchingCubes samples is regressed, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=282943
.
Tadeu Zagallo
Comment 5
2024-11-13 08:38:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36594
EWS
Comment 6
2024-11-14 02:05:09 PST
Committed
286585@main
(19c23eb1b0c4): <
https://commits.webkit.org/286585@main
> Reviewed commits have been landed. Closing PR #36594 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug